--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
   <a href="#!"
     <span>HOME</span>
   </a>
-  <a href = "#1">
+  <a href = "#!">
     <span>ABOUT</span>
   </a>
-  <a href = "#1">
+  <a href = "#!">
     <span>CONTACT</span>
   </a>
-  <a href = "#1">
+  <a href = "#!">
     <span>FAQ</span>
   </a>
 </nav>
